--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ p {
 }
 
 .dropbtn {
-    background-color: #4CAF50;
+    background-color: lightgray;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -70,4 +70,4 @@ p {
   
   .dropdown:hover .dropdown-content {display: block;}
   
-  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+  .dropdown:hover .dropbtn {background-color: #999;}
