--- a/styles.css
+++ b/styles.css
@@ -3,26 +3,36 @@ body {
     font-family: Arial, Helvetica, sans-serif
 }
 .head {
-    color: blue
+    color: firebrick
 }
 p {
-    color: blueviolet
+    color: rgb(209, 5, 5);
+    font-size: xx-large;
+    font-weight: 2000;
+    line-height: 150px
 }
 .a {
-    background-color: orange
+    background-color: paleturquoise;
+
 }
 .b { 
-    background-color: orange
+    background-color: paleturquoise
 }
 .c {
-    background-color: orange
+    background-color: paleturquoise
 }
 .body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 1400px
+    width: 1400;
+    height: 800;
+    LINE-HEIGHT:55px;
 }
 .h {
-    color: orange
+    color: firebrick;
+    font-size: 100px
+}
+.subheader {
+    color: darkblue
 }
 .button {
     font-size: xx-large;
@@ -80,38 +90,3 @@ p {
 .button5:hover {
     background-color: lightseagreen
 }
-
-.dropbtn {
-    background-color: lightgray;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-  }
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  .dropdown:hover .dropdown-content {display: block;}
-  
-  .dropdown:hover .dropbtn {background-color: #999;}
