--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@ body {
     font-size: x-large;
     font-family: Arial, Helvetica, sans-serif
 }
+.img1 {
+    width: 100%;
+    height: 450;
+    z-index: 0
+}
 .head {
     color: firebrick
 }
@@ -24,7 +29,7 @@ p {
 .body {
     background-color: paleturquoise;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 1400;
+    width: 100%;
     height: 800;
     LINE-HEIGHT:55px;
 }
@@ -91,38 +96,3 @@ p {
 .button5:hover {
     background-color: lightseagreen
 }
-
-.dropbtn {
-    background-color: lightgray;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-  }
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  .dropdown:hover .dropdown-content {display: block;}
-  
-  .dropdown:hover .dropbtn {background-color: #999;}
